[B]Version v1.8.0[/B]
- Fixed Dailymotion URLs with new Turtle.
- Default set to dailymotion.

[B]Version v1.7.9[/B]
- Fixed URL for reloading cache.
- Added favourites item.

[B]Version v1.7.8[/B]
- Added Auto Playback settings. Default is enabled.

[B]Version v1.7.7[/B]
- Added new turtle version with DM fix.

[B]Version v1.7.6[/B]
- Disabled Google Analytics by default. Later it settings might be provided.

[B]Version v1.7.5[/B]
- Categorization of video links fixed.

[B]Version v1.7.4[/B]
- DesiRulez website parsing.

[B]Version v1.7.3[/B]
- Updated turtle version.

[B]Version v1.7.2[/B]
- Fixed YouTube links.

[B]Version v1.7.1[/B]
- Fixed Dailymotion links.

[B]Version v1.7.0[/B]
- New live channels added.
- Fixed pagination URL. 

[B]Version v1.6.9[/B]
- Playwire links parsing corrected. 

[B]Version v1.6.8[/B]
- Straighten live category and removed not working links. 

[B]Version v1.6.6 - 1.6.7[/B]
- Added Google Analytics parameters.

[B]Version v1.6.5[/B]
- Error handling.

[B]Version v1.6.4[/B]
- Added Turtle version.

[B]Version v1.6.3[/B]
- Making compatible with new Turtle version Google Analytics.

[B]Version v1.5.2[/B]
- Removed caching of json file content.
- Added logger statements

[B]Version v1.5.1[/B]
- Updated DT TV Shows parsing and also added continuous play feature.
- Updated turtle version to 1.4.7 for immediate fixes.

[B]Version v1.5.0[/B]
- Updated turtle version to 1.4.2.

[B]Version v1.4.9[/B]
- Updated turtle version to 1.4.0.

[B]Version v1.4.8[/B]
- Moved to new directory structure.

[B]Version v1.4.5[B]
- Added new Turtle v1.3.2 dependency. Turtle takes care of cleaning objects.

[B]Version v1.4.2 - v1.4.4[B]
- Fixed some issues related to resolving streaming links
- Enabled caching of channels JSON file.

[B]Version v1.4.1[/B]
- DirectPlay is redefined as PDP (Preferred Direct Play). Enabled for DR only.
- Continuous Play: a new replacement for DirectPlay existing functionality